--- a/.github/workflows/login.yml
+++ b/.github/workflows/login.yml
@@ -1,4 +1,4 @@
-name: Robot Framework Tests API
+name: login
  
 on: push
  
@@ -21,7 +21,7 @@ jobs:
       - name: Run Robot Framework tests
         # run: echo Executando os testes de API do Robot
         run: |
-          robot -d results ./tests/
+          robot -d results ./tests/login.robot
       - name: Test Report
         # run: echo Salvando o Report dos Testes
         uses: actions/upload-artifact@v4
