--- a/.github/workflow/departamento.yml
+++ b/.github/workflow/departamento.yml
@@ -1,5 +1,4 @@
-name: lista de diretoria
- 
+name: Incluir departamento
 on: push
  
 jobs:
@@ -21,7 +20,7 @@ jobs:
       - name: Run Robot Framework tests
         # run: echo Executando os testes de API do Robot
         run: |
-          robot -d results ./tests/listar.diretoria.robot
+          robot -d results ./tests/departamento.robot
       - name: Test Report
         # run: echo Salvando o Report dos Testes
         uses: actions/upload-artifact@v4
